--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -259,7 +259,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 176. Flight of the Amazon Queen (Interactive Binary Illusions) - 1995
 177. Frankenstein: Through the Eyes of the Monster (Amazing Media) - 1995
 178. Guilty (Divide By Zero) - 1995
-179. Heaven's Dawn[4] (Art 9 Entertainment Inc.) - 1995
+179. Heaven's Dawn (Art 9 Entertainment Inc.) - 1995
 180. In the 1st Degree (Adair & Armstrong) - 1995
 181. Jewels of the Oracle (Dreamcatcher Interactive) - 1995
 182. The Journeyman Project 2: Buried in Time (Presto Studios) - 1995
@@ -375,7 +375,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 292. Ankh: The Tales of Mystery (Artex Software) - 1998
 293. Morpheus (Soap Bubble Productions) - 1998
 294. Nightlong: Union City Conspiracy (Team17, Trecision) - 1998
-295. ZeroZone[7] (R&P Electronic Media) - 1998
+295. ZeroZone (R&P Electronic Media) - 1998
 296. The Journeyman Project 3: Legacy of Time (Presto Studios) - 1998
 297. Black Dahlia (Take-Two Interactive) - 1998
 298. Tex Murphy: Overseer (Access Software) - 1998
