--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -6,6 +6,9 @@ comments: true
 categories: ["Let's Adventure!"]
 tags: [series, adventure]
 pin: true
+image:
+  src: /images/adventure/bg.jpg
+  alt: Title Image
 ---
 
 When I was growing up in the 80's my favourite games to play were adventure games. I've always found myself going back to this genre, and as I grew up and moved into software development the [ScummVM](https://www.scummvm.org/) project held a certain appeal as it combined two passions for me.
