--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -57,7 +57,17 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-<strong><tt>{ progress: { finished: 22, skipped: 6, total: 363 }, complete: "7.71%" }</tt></strong>
+
+```js
+{
+  progress: {
+    finished: 22,
+    skipped: 6,
+    total: 363
+  },
+  complete: "7.71%"
+}
+```
 <hr>
 
 1. [Mystery House (On-Line Systems)]({% post_url 2021-08-03-mystery-house %}) - 1980
