--- a/_posts/2023-02-07-eternam.markdown
+++ b/_posts/2023-02-07-eternam.markdown
@@ -11,7 +11,7 @@ image:
 ---
 _This review is part of the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %})._
 
-[Eternam](https://en.wikipedia.org/wiki/Eternam) combines futuristic elements with historical settings. The player assumes the role of officer Don Jonz in Orion United Forces, who is starting a vacation in the planet Eternam. The planet is described as a galactic amusement centre, where different islands represent different periods of Earth's history.
+[Eternam](https://en.wikipedia.org/wiki/Eternam) combines futuristic elements with historical settings. The player assumes the role of officer Don Jonz of the Orion United Forces, who is starting a vacation on the planet Eternam. The planet is described as a galactic amusement centre, where different islands represent different periods of Earth's history.
 
 ![](/images/adventure/eternam/razor_002.png)
 _Check out the Razor1911 cracktro at [Demozoo](https://demozoo.org/productions/139337/)_
