--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -60,11 +60,11 @@ As I work through the list I'll link the reviews below. You can also find the re
 ```js
 {
   progress: {
-    finished: 32,
+    finished: 33,
     skipped: 6,
     total: 363
   },
-  complete: "{{ 32 | plus: 6 | times: 100.0 | divided_by: 363 | round: 2 }}%"
+  complete: "{{ 33 | plus: 6 | times: 100.0 | divided_by: 363 | round: 2 }}%"
 }
 ```
 <hr>
@@ -374,7 +374,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 304. Shivers II: Harvest of Souls (Sierra On-Line) - 1997
 305. Callahan's Crosstime Saloon (Legend Entertainment) - 1997
 306. Safecracker (Daydream Software) - 1997
-307. Duckman: The Graphic Adventures of a Private Dick (The Illusions Gaming Company) - 1997
+307. [Duckman: The Graphic Adventures of a Private Dick (The Illusions Gaming Company)]({% post_url 2023-03-03-duckman %}) - 1997
 308. The Feeble Files (Adventure Soft) - 1997
 309. The Journeyman Project: Pegasus Prime (Presto Studios) - 1997
 310. The Space Bar (Boffo Games) - 1997
