--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -60,11 +60,11 @@ As I work through the list I'll link the reviews below. You can also find the re
 ```js
 {
   progress: {
-    finished: 33,
-    skipped: 7,
+    finished: 34,
+    skipped: 8,
     total: 363
   },
-  complete: "{{ 33 | plus: 7 | times: 100.0 | divided_by: 363 | round: 2 }}%"
+  complete: "{{ 34 | plus: 8 | times: 100.0 | divided_by: 363 | round: 2 }}%"
 }
 ```
 <hr>
@@ -101,14 +101,14 @@ As I work through the list I'll link the reviews below. You can also find the re
 30. Uninvited (ICOM Simulations) - 1986
 31. [Space Quest: The Sarien Encounter (Sierra On-Line)]({% post_url 2021-08-09-space-quest-the-sarien-encounter %}) - 1986
 32. King's Quest III: To Heir Is Human (Sierra On-Line) - 1986
-33. ~~Suishō no Dragon (Square) - 1986~~ (_Japanese only_)
+33. ~~Suishō no Dragon (Square) - 1986~~ (_Japanese only, though a [fan translation](https://www.romhacking.net/translations/657/) exists_)
 34. ~~La Abadía del Crimen (The Abbey of Crime) (Opera Soft) - 1987~~ (_Spanish only_)
 35. Mortville Manor (Lankhor) - 1987
 36. [Police Quest: In Pursuit of the Death Angel (Sierra On-Line)]({% post_url 2022-03-15-police-quest-1 %}) - 1987
 37. [Leisure Suit Larry in the Land of the Lounge Lizards (Sierra On-Line)]({% post_url 2022-12-19-leisure-suit-larry %}) - 1987
 38. [Shadowgate (ICOM Simulations)]({% post_url 2021-08-16-shadowgate %}) - 1987
 39. The Faery Tale Adventure (MicroIllusions) - 1987
-40. Méwilo (Coktel Vision) - 1987
+40. ~~Méwilo (Coktel Vision) - 1987~~ (_German, French only_)
 41. Maniac Mansion (Lucasfilm Games) - 1987
 42. [Space Quest II: Vohaul's Revenge (Sierra On-Line)]({% post_url 2023-02-24-space-quest-2 %}) - 1987
 43. Déjà Vu II: Lost in Las Vegas (ICOM Simulations) - 1988
@@ -165,7 +165,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 94. Spellcasting 201: The Sorcerer's Appliance (Legend Entertainment) - 1991
 95. Timequest (Legend Entertainment) - 1991
 96. Space Quest IV: Roger Wilco and the Time Rippers (Sierra On-Line) - 1991
-97. ~~Metal Slader Glory (HAL Laboratory) - 1991~~ (_Japanese only, though [fan translation](https://www.romhacking.net/translations/3755/) exists_ )
+97. ~~Metal Slader Glory (HAL Laboratory) - 1991~~ (_Japanese only, though a [fan translation](https://www.romhacking.net/translations/3755/) exists_)
 98. Leisure Suit Larry 5: Passionate Patti Does a Little Undercover Work (Sierra On-Line) - 1991
 99. Monkey Island 2: LeChuck's Revenge (LucasArts) - 1991
 100. Amazon: Guardians of Eden (Access Software) - 1992
@@ -293,7 +293,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 222. Wolfsbane (Midnight Games) - 1995
 223. Lost Eden (Cryo Interactive) - 1995
 224. Nocturnal Illusion (Apricot) - 1995
-225. Full Throttle (LucasArts) - 1995
+225. [Full Throttle (LucasArts)]({% post_url 2023-03-10-full-throttle %}) - 1995
 226. Aliens: A Comic Book Adventure (Cryo Interactive) - 1995
 227. Star Trek: The Next Generation – A Final Unity (Spectrum HoloByte) - 1995
 228. Space Quest 6: The Spinal Frontier (Sierra On-Line) - 1995
@@ -322,14 +322,14 @@ As I work through the list I'll link the reviews below. You can also find the re
 251. The Dame Was Loaded (Beam Software) - 1996
 252. Discworld II: Missing Presumed...!? (Perfect Entertainment) - 1996
 253. Dragon Lore II: The Heart of the Dragon Man (Cryo Interactive) - 1996
-255. Fable (Simbiosis Interactive) - 1996
-256. The Gene Machine (Divide By Zero) - 1996
-257. Kingdom II: Shadoan (Virtual Image Productions) - 1996
-258. Monty Python & the Quest for the Holy Grail (7th Level) - 1996
-259. Mutation of J.B. (Invention) - 1996
-260. Orion Burger (Sanctuary Woods) - 1996
-261. UFOs (Artech) - 1996
-262. Angel Devoid: Face of the Enemy (Electric Dreams) - 1996
+254. Fable (Simbiosis Interactive) - 1996
+255. The Gene Machine (Divide By Zero) - 1996
+256. Kingdom II: Shadoan (Virtual Image Productions) - 1996
+257. Monty Python & the Quest for the Holy Grail (7th Level) - 1996
+258. Mutation of J.B. (Invention) - 1996
+259. Orion Burger (Sanctuary Woods) - 1996
+260. UFOs (Artech) - 1996
+261. Angel Devoid: Face of the Enemy (Electric Dreams) - 1996
 263. Chronicles of the Sword (Synthetic Dimensions) - 1996
 264. Bad Mojo (Pulse Entertainment) - 1996
 265. Ripper (Take-Two Interactive) - 1996
